--- a/api/api.csproj
+++ b/api/api.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="NSwag.AspNetCore" Version="14.5.0" />
+      <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="14.5.0" />
     </ItemGroup>
 
     <PropertyGroup>
